--- a/.github/workflows/suite_hexagon.yml
+++ b/.github/workflows/suite_hexagon.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   hexagon_build:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hexagon Build Test
     steps:
       - uses: actions/checkout@v6
