--- a/.github/workflows/suite_riscv.yml
+++ b/.github/workflows/suite_riscv.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   riscv_tests:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: RISC-V Tests
     steps:
     - uses: actions/setup-python@v6
