--- a/.github/workflows/suite_xtensa.yml
+++ b/.github/workflows/suite_xtensa.yml
@@ -21,6 +21,7 @@ jobs:
   vision_p6_basic:
     if: inputs.scope == 'basic' || inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Vision P6 Build
     steps:
       - uses: actions/checkout@v6
@@ -39,6 +40,7 @@ jobs:
   hifi5_unit_tests:
     if: inputs.scope == 'basic' || inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hifi5 Unit Tests
     steps:
       - uses: actions/checkout@v6
@@ -57,6 +59,7 @@ jobs:
   hifi5_unit_tests_with_compression:
     if: inputs.scope == 'basic' || inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hifi5 Unit Tests with Compression
     steps:
       - uses: actions/checkout@v6
@@ -75,6 +78,7 @@ jobs:
   hifi_3z_unit_tests:
     if: inputs.scope == 'basic' || inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hifi3z Unit Tests
     steps:
       - uses: actions/checkout@v6
@@ -93,6 +97,7 @@ jobs:
   hifi_3z_unit_tests_with_compression:
     if: inputs.scope == 'basic' || inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hifi3z Unit Tests with Compression
     steps:
       - uses: actions/checkout@v6
@@ -113,6 +118,7 @@ jobs:
   f1_unit_tests:
     if: inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Fusion F1 Unit Tests
     steps:
       - uses: actions/checkout@v6
@@ -131,6 +137,7 @@ jobs:
   vision_p6_extended:
     if: inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Vision P6 Unit Tests
     steps:
       - uses: actions/checkout@v6
@@ -149,6 +156,7 @@ jobs:
   hifimini_unit_tests:
     if: inputs.scope == 'all'
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     name: Hifimini Unit Tests
     steps:
       - uses: actions/checkout@v6
