--- a/.github/workflows/test_bazel.yml
+++ b/.github/workflows/test_bazel.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   bazel_tests:
     runs-on: linux-x86-n2-16
+    timeout-minutes: 60
     container:
       image: ghcr.io/tflm-bot/tflm-ci:0.6.7
     strategy:
