--- a/.github/workflows/test_misc.yml
+++ b/.github/workflows/test_misc.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   check_code_style:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     name: Code Style
     container:
@@ -23,6 +24,7 @@ jobs:
 
   cpp_build_warnings:
     runs-on: linux-x86-n2-16
+    timeout-minutes: 60
     container:
       image: ghcr.io/tflm-bot/tflm-ci:0.6.7
     name: C++ Build Warnings
@@ -35,6 +37,7 @@ jobs:
 
   project_generation:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     name: Project Generation
     container:
