--- a/.github/workflows/test_hosted.yml
+++ b/.github/workflows/test_hosted.yml
@@ -40,8 +40,11 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
+          bazelrc: |
+            startup --output_user_root=C:/tmp
+            startup --windows_enable_symlinks
       - name: Build
-        run: bazel --output_user_root="C:/tmp" --windows_enable_symlinks build --announce_rc --workspace_status_command="cmd /c exit 0" -k "//tensorflow/lite/micro/..."
+        run: bazel build --announce_rc --workspace_status_command="cmd /c exit 0" -k "//tensorflow/lite/micro/..."
 
   bazel-windows:
     runs-on: windows-x86-n2-16
@@ -58,6 +61,9 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
+          bazelrc: |
+            startup --output_user_root=C:/tmp
+            startup --windows_enable_symlinks
       - uses: actions/setup-python@v6
         with:
           python-version: '3.10'
