[CI] Windows .bazelrc (#3456)
* bazelrc startup

* Windows Bazel

--- a/.github/workflows/test_hosted.yml
+++ b/.github/workflows/test_hosted.yml
@@ -40,8 +40,10 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
+          bazelrc: |
+            startup --windows_enable_symlinks
       - name: Build
-        run: bazel --output_user_root="C:/tmp" --windows_enable_symlinks build --announce_rc --workspace_status_command="cmd /c exit 0" -k "//tensorflow/lite/micro/..."
+        run: bazel build --config=windows_ci --announce_rc -k "//tensorflow/lite/micro/..."
 
   bazel-windows:
     runs-on: windows-x86-n2-16
@@ -58,6 +60,8 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
+          bazelrc: |
+            startup --windows_enable_symlinks
       - uses: actions/setup-python@v6
         with:
           python-version: '3.10'
@@ -67,7 +71,7 @@ jobs:
       - name: Test
         shell: bash
         run: |
-          tensorflow/lite/micro/tools/ci_build/test_bazel.sh windows_ci "//tensorflow/lite/micro/..."
+          bazel test --config=windows_ci --build_tests_only "//tensorflow/lite/micro/..."
 
   makefile-windows:
     runs-on: windows-x86-n2-16
