--- a/.bazelrc
+++ b/.bazelrc
@@ -31,6 +31,8 @@ common --enable_platform_specific_config
 build:linux --cxxopt=-std=c++17
 build:macos --cxxopt=-std=c++17
 build:windows --cxxopt=/std:c++17
+
+# Optimization for Windows
 build:windows --incompatible_strict_action_env
 build:windows --features=compiler_param_file
 build:windows --enable_runfiles
@@ -54,8 +56,11 @@ build:ci --action_env=CXX=clang++
 build:windows_ci --config=_ci_base
 build:windows_ci --config=windows
 build:windows_ci --jobs=10
+build:windows_ci --show_progress
 build:windows_ci --show_progress_rate_limit=60
 build:windows_ci --workspace_status_command="cmd /c exit 0"
+build:windows_ci --announce_rc
+build:windows_ci --build_tests_only
 
 # Common options for sanitizers
 build:_sanitizer_base --action_env=CC=clang
