--- a/.github/workflows/test_hosted.yml
+++ b/.github/workflows/test_hosted.yml
@@ -38,12 +38,12 @@ jobs:
       - uses: bazel-contrib/setup-bazel@0.18.0
         with:
           bazelisk-cache: true
-          disk-cache: true
+          disk-cache: false
           repository-cache: true
           bazelrc: |
             startup --windows_enable_symlinks
       - name: Build
-        run: bazel --output_user_root="C:/tmp" --windows_enable_symlinks build --config=windows_ci --announce_rc -k "//tensorflow/lite/micro/..."
+        run: bazel --output_user_root="C:/tmp" --windows_enable_symlinks build --config=windows_ci -k "//tensorflow/lite/micro/..."
 
   bazel-windows:
     runs-on: windows-x86-n2-16
@@ -58,7 +58,7 @@ jobs:
       - uses: bazel-contrib/setup-bazel@0.18.0
         with:
           bazelisk-cache: true
-          disk-cache: true
+          disk-cache: false
           repository-cache: true
           bazelrc: |
             startup --windows_enable_symlinks
@@ -71,7 +71,7 @@ jobs:
       - name: Test
         shell: bash
         run: |
-          bazel --output_user_root="C:/tmp" --windows_enable_symlinks test --config=windows_ci --build_tests_only "//tensorflow/lite/micro/..."
+          bazel --output_user_root="C:/tmp" --windows_enable_symlinks test --config=windows_ci "//tensorflow/lite/micro/..."
 
   makefile-windows:
     runs-on: windows-x86-n2-16
