--- a/.github/workflows/test_misc.yml
+++ b/.github/workflows/test_misc.yml
@@ -32,6 +32,12 @@ jobs:
       - uses: actions/checkout@v6
         with:
           ref: ${{ inputs.trigger-sha || github.ref }}
+      - uses: bazel-contrib/setup-bazel@0.18.0
+        with:
+          bazelisk-cache: true
+          disk-cache: true
+          cache-save: ${{ github.event_name == 'push' }}
+          repository-cache: true
       - name: Build with Warnings as Errors
         run: bazel build --copt="-Werror" //...
 
@@ -46,6 +52,12 @@ jobs:
       - uses: actions/checkout@v6
         with:
           ref: ${{ inputs.trigger-sha }}
+      - uses: bazel-contrib/setup-bazel@0.18.0
+        with:
+          bazelisk-cache: true
+          disk-cache: true
+          cache-save: ${{ github.event_name == 'push' }}
+          repository-cache: true
       - name: Test
         run: |
           cd ..
