--- a/.github/workflows/check_bug_id.yml
+++ b/.github/workflows/check_bug_id.yml
@@ -14,7 +14,7 @@ jobs:
     name: Check for BUG=
     steps:
       - name: Check for BUG=
-        if: ${{ !contains(github.event.pull_request.body, 'BUG=') }}
+        if: ${{ !contains(github.event.pull_request.body, 'BUG=') && github.event.pull_request.user.login != 'dependabot[bot]' && github.event.pull_request.user.login != 'TFLM-bot' }}
         run: |
           echo "PR description requires a BUG= line with issue number."
           echo "See https://testing.googleblog.com/2017/09/code-health-providing-context-with.html for additional context"
